updated footer and popup buttons cutoff issue.

--- a/style.css
+++ b/style.css
@@ -86,15 +86,15 @@ body {
 
 /* dont display the popup on load */
 .popupContainer {
-  position: absolute;
-  background-color: var(--primary);
 
-  /* height: 100%; */
-
+  height: 100%;
 }
 
 #popup_main_container {
+  position: absolute;
+  background-color: var(--primary);
   display: none;
+  overflow-y: auto;
 }
 
 #popup_edit_container {
@@ -105,6 +105,7 @@ body {
 .task_button_container {
   display: flex;
   justify-content: space-evenly;
+  margin-bottom: 2rem;
 }
 
 .task_button_container button {
@@ -223,11 +224,7 @@ body {
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: auto 0;
+  z-index: -1;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -235,13 +232,14 @@ footer {
     margin: 0 6em;
   }
 
-  footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: auto;
-  }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+ }
 
   footer a {
     text-decoration: none;
@@ -255,16 +253,20 @@ footer {
     color: #f15454;
     text-decoration: none;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+ }
 
 }
 
 @media only screen and (min-width: 600px) {
   .wrapper_container{
     height: 100%;
-  }
-
-  #popup_main_container{
-    height: auto;
   }
 
   footer a {
